--- a/pages/failure.html
+++ b/pages/failure.html
@@ -2,8 +2,27 @@
 <html>
     <head>
         <title>You've been thrown into the abyss</title>
-    </head>
-    <body bgcolor="#000000">
+        <!--Links to Bootstrap-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
+        <!--Links to Bootstrap Javascript-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
+    </head>
+    <body style = "background-color: black;">
+        <div>
+            <div width="800" style="text-align:center; margin-top:50px;">
+                <h1 style="color: white;">THE ABYSS</h1>
+                <h6 style="color: white;">Looks like you have fallen into the abyss</h6>
+            </div>
+        </div>
+        <div>
+            <div width="800" style="text-align:center; margin-top:50px;">
+                <a href="../index.html"><button class="btn btn-outline-success my-2 my-sm-0" type="submit"><h3>Return to the Beginning</h3></button></a>
+            </div>
+        </div>
     </body>
 </html>
