--- a/pages/page1.html
+++ b/pages/page1.html
@@ -28,6 +28,7 @@
                 }
                 else {
                     document.getElementById("change").innerHTML = "Finished!";
+                    window.location.href = 'page2.html';
                 }
             }
         </script>
@@ -42,14 +43,14 @@
         
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Level 1<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a style = "color: red;" class="nav-link" href="">Level 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Level 3</a>
+                        <a class="nav-link disabled" href="">Level 2</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Level 3</a>
+                        <a class="nav-link disabled" href="">Level 3</a>
                     </li>
                 </ul>
                 <a href="../index.html"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Return To The Beginning of the Maze</button></a>
