--- a/pages/failure.html
+++ b/pages/failure.html
@@ -24,5 +24,10 @@
                 <a href="../index.html"><button class="btn btn-outline-success my-2 my-sm-0" type="submit"><h3>Return to the Beginning</h3></button></a>
             </div>
         </div>
+        <div style="width: 100%; overflow: hidden;">
+            <div style=" text-align:center; margin-top:50px;">
+                <img style="max-width: 100%;" src="../trollfacewhite.png">
+            </div>
+        </div>
     </body>
 </html>
